Stops tooltip text from wrapping

--- a/src/assets/scss/ui/_tooltip.scss
+++ b/src/assets/scss/ui/_tooltip.scss
@@ -18,6 +18,8 @@
 		padding:4px;
 		color:#fff;
 		font-size:0.8em;
+		word-wrap:no-wrap;
+		white-space:nowrap;
 		background:#000;
 		background:rgba(0,0,0,0.8);
 		border-radius:4px 6px;
